--- a/login.html
+++ b/login.html
@@ -17,12 +17,12 @@
     <body id="body_login">
         <div class="formulario">
             <h1>Inicio de Sesión</h1>
-            <form method="post">
+            <form id="logueo" method="post">
                 <div class="username">
-                    <input type="text" placeholder="Nombre de usuario" required>
+                    <input id="usuario" type="text" placeholder="Nombre de usuario" required>
                 </div>
                 <div class="contrasena">
-                    <input type="password" placeholder="Contraseña" required>
+                    <input id="contrasena" type="password" placeholder="Contraseña" required>
                 </div>
                 <div class="recordar">¿Olvido la contraseña?</div>
                 <input type="submit" value="Iniciar">
@@ -31,7 +31,13 @@
                 </div>
             </form>
         </div>
-        <script src="./javascript.js" defer></script>
+        <!-- jquery -->
+        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        
+        <!-- mi js -->
+        <script src="./codigo.js" defer></script>
+        
+        <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
